--- a/app/src/main/res/layout/complemento_internet.xml
+++ b/app/src/main/res/layout/complemento_internet.xml
@@ -26,7 +26,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="#717171"
                 android:gravity="center_horizontal"
-                android:textSize="17dp"
+                android:textSize="16dp"
                 android:id="@+id/intextname"
                 android:maxHeight="50dp"
 
@@ -53,10 +53,25 @@
                     android:gravity="left"
                     android:id="@+id/extprice"
                     android:textStyle="bold"
-                    android:textSize="13dp"
+                    android:textSize="12dp"
                     android:text="$160 mas al mes"
                     />
             </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:id="@+id/promo"
+                android:visibility="gone"
+
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="5dp"
+                android:textColor="@color/izzi_rosa"
+                android:gravity="left"
+                android:textStyle="bold"
+                android:textSize="10dp"
+                android:text="+ "
+                />
         </LinearLayout>
         <ImageView
             android:layout_width="30dp"
@@ -65,6 +80,7 @@
             android:id="@+id/icon"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"/>
+
     </RelativeLayout>
 </LinearLayout>
     </LinearLayout>
