--- a/app/src/main/res/layout/activity_domicilia.xml
+++ b/app/src/main/res/layout/activity_domicilia.xml
@@ -158,7 +158,7 @@
                         android:ems="6"
                         android:textSize="15dp"
                         app:include_zip="false"
-                        app:include_security="false"
+                        app:include_security="true"
                         android:background="#FFFFFF"
                         android:id="@+id/cardNumber"
                         app:input_background="@drawable/trjetacuadro"
